--- a/The Math/ChartDetailView.xib
+++ b/The Math/ChartDetailView.xib
@@ -6,37 +6,99 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ChartDetailView" customModule="HowAmIDoing" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2eU-Jz-1DQ" customClass="CircleProgressView">
-                    <rect key="frame" x="457" y="26" width="100" height="100"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SDV-Zh-V5M">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="140"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pLz-gx-ZOP" customClass="CircleProgressView" customModule="HowAmIDoing" customModuleProvider="target">
+                            <rect key="frame" x="456" y="20" width="100" height="100"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="100" id="QuW-Vh-XHh"/>
+                                <constraint firstAttribute="width" constant="100" id="jCM-Uy-KzU"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="trackBackgroundColor">
+                                    <color key="value" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="trackFillColor">
+                                    <color key="value" red="0.90980392160000001" green="0.92549019610000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="progress">
+                                    <real key="value" value="0.66000000000000003"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kX9-B7-qyn" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
+                            <rect key="frame" x="34" y="24" width="414" height="34"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OMG-sg-zCC" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
+                            <rect key="frame" x="34" y="66" width="414" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="progress">
-                            <real key="value" value="64"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="trackBackgroundColor">
-                            <color key="value" red="1" green="0.61817507679999995" blue="0.84777172970000003" alpha="1" colorSpace="calibratedRGB"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="trackFillColor">
-                            <color key="value" red="0.87949810610000001" green="0.87949810610000001" blue="0.87949810610000001" alpha="1" colorSpace="calibratedRGB"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="boolean" keyPath="clockwise" value="YES"/>
-                        <userDefinedRuntimeAttribute type="number" keyPath="trackWidth">
-                            <real key="value" value="3"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="trackBorderColor">
-                            <color key="value" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="number" keyPath="trackBorderWidth">
-                            <real key="value" value="2"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
+                    <constraints>
+                        <constraint firstItem="OMG-sg-zCC" firstAttribute="leading" secondItem="SDV-Zh-V5M" secondAttribute="leading" constant="34" id="2Ib-h2-wjF"/>
+                        <constraint firstItem="kX9-B7-qyn" firstAttribute="leading" secondItem="SDV-Zh-V5M" secondAttribute="leading" constant="34" id="6R9-Lx-0O8"/>
+                        <constraint firstItem="kX9-B7-qyn" firstAttribute="top" secondItem="SDV-Zh-V5M" secondAttribute="top" constant="24" id="ILQ-ly-vK1"/>
+                        <constraint firstItem="OMG-sg-zCC" firstAttribute="top" secondItem="kX9-B7-qyn" secondAttribute="bottom" constant="8" id="Ijb-9R-bRe"/>
+                        <constraint firstItem="pLz-gx-ZOP" firstAttribute="top" secondItem="SDV-Zh-V5M" secondAttribute="top" constant="20" id="fIf-Ow-HqL"/>
+                        <constraint firstItem="pLz-gx-ZOP" firstAttribute="leading" secondItem="OMG-sg-zCC" secondAttribute="trailing" constant="8" id="fYd-uF-os8"/>
+                        <constraint firstAttribute="bottom" secondItem="pLz-gx-ZOP" secondAttribute="bottom" constant="20" id="nwX-Xb-Xcv"/>
+                        <constraint firstAttribute="trailing" secondItem="pLz-gx-ZOP" secondAttribute="trailing" constant="44" id="pmz-1h-S7Q"/>
+                        <constraint firstItem="pLz-gx-ZOP" firstAttribute="leading" secondItem="kX9-B7-qyn" secondAttribute="trailing" constant="8" id="zRq-rI-kjp"/>
+                    </constraints>
+                </view>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jx5-i6-2uA">
+                    <rect key="frame" x="0.0" y="148" width="600" height="388"/>
+                </scrollView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lpa-2D-8bz">
+                    <rect key="frame" x="0.0" y="536" width="600" height="64"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="89L-NG-rcI" customClass="CabritoButton" customModule="HowAmIDoing" customModuleProvider="target">
+                            <rect key="frame" x="34" y="8" width="95" height="27"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <state key="normal" title="Delete this mood">
+                                <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="89L-NG-rcI" firstAttribute="leading" secondItem="Lpa-2D-8bz" secondAttribute="leading" constant="34" id="GmX-jP-8mV"/>
+                        <constraint firstItem="89L-NG-rcI" firstAttribute="top" secondItem="Lpa-2D-8bz" secondAttribute="top" constant="8" id="Ina-3t-3ir"/>
+                        <constraint firstAttribute="height" constant="64" id="gID-N3-er8"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="SDV-Zh-V5M" secondAttribute="trailing" id="768-0e-7oI"/>
+                <constraint firstItem="Lpa-2D-8bz" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="7x1-Ns-AT1"/>
+                <constraint firstItem="Lpa-2D-8bz" firstAttribute="top" secondItem="jx5-i6-2uA" secondAttribute="bottom" id="C6R-Y5-2aW"/>
+                <constraint firstItem="SDV-Zh-V5M" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="LN1-Av-RNM"/>
+                <constraint firstAttribute="bottom" secondItem="Lpa-2D-8bz" secondAttribute="bottom" id="c2D-4q-2go"/>
+                <constraint firstItem="jx5-i6-2uA" firstAttribute="top" secondItem="SDV-Zh-V5M" secondAttribute="bottom" constant="8" id="g9T-Zr-IcB"/>
+                <constraint firstItem="jx5-i6-2uA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="gRS-wA-EOt"/>
+                <constraint firstAttribute="trailing" secondItem="jx5-i6-2uA" secondAttribute="trailing" id="iX9-iN-YAy"/>
+                <constraint firstAttribute="trailing" secondItem="Lpa-2D-8bz" secondAttribute="trailing" id="pRd-dm-uPO"/>
+                <constraint firstItem="SDV-Zh-V5M" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="xy1-zJ-J4I"/>
+            </constraints>
+            <connections>
+                <outlet property="dateLabel" destination="OMG-sg-zCC" id="6tI-X4-HhZ"/>
+                <outlet property="progressView" destination="pLz-gx-ZOP" id="vhv-Hz-gam"/>
+                <outlet property="timeLabel" destination="kX9-B7-qyn" id="8k5-m3-WTF"/>
+            </connections>
         </view>
     </objects>
 </document>
