--- a/The Math/OnboardingReflectView.xib
+++ b/The Math/OnboardingReflectView.xib
@@ -19,7 +19,7 @@
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reflect" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHJ-7l-VT2">
                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                             <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="19"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rotate your phone to see your mood over time. Understand where you were, what you did, the weather, etc" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Was-AZ-sBc">
@@ -28,7 +28,7 @@
                                 <constraint firstAttribute="width" constant="280" id="MYG-Lk-hpD"/>
                             </constraints>
                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                             <variation key="default">
                                 <mask key="constraints">
@@ -62,12 +62,12 @@
                         <mask key="constraints">
                             <exclude reference="BFS-QH-IcZ"/>
                             <exclude reference="UcU-OL-20B"/>
-                            <exclude reference="DWC-Lv-Odv"/>
-                            <exclude reference="ifO-TG-ARh"/>
-                            <exclude reference="pqf-mP-Nti"/>
                             <exclude reference="Fpq-yd-fnx"/>
                             <exclude reference="UuE-O9-i0g"/>
                             <exclude reference="zCk-4v-sZF"/>
+                            <exclude reference="DWC-Lv-Odv"/>
+                            <exclude reference="ifO-TG-ARh"/>
+                            <exclude reference="pqf-mP-Nti"/>
                         </mask>
                     </variation>
                     <variation key="heightClass=regular-widthClass=compact">
@@ -79,12 +79,12 @@
                         <mask key="constraints">
                             <include reference="BFS-QH-IcZ"/>
                             <include reference="UcU-OL-20B"/>
-                            <include reference="DWC-Lv-Odv"/>
-                            <include reference="ifO-TG-ARh"/>
-                            <include reference="pqf-mP-Nti"/>
                             <include reference="Fpq-yd-fnx"/>
                             <include reference="UuE-O9-i0g"/>
                             <include reference="zCk-4v-sZF"/>
+                            <include reference="DWC-Lv-Odv"/>
+                            <include reference="ifO-TG-ARh"/>
+                            <include reference="pqf-mP-Nti"/>
                         </mask>
                     </variation>
                 </view>
